<resources>
    <string name="app_name">Advanced Translator</string>
    <string name="change_lang_text_button">Change Language</string>
    <string name="translate_text" />
    <string name="translate_text_hint">Write to Translate!</string>
    <string name="output_text_hint" />
    <string name="change_lang_image_button_content_description">Change Language</string>
    <string name="translate_service1">Yandex</string>
    <string name="translate_service2">MyMemory</string>
    <string name="translate_service3">SysTran</string>
    <string name="clear_text">Clear text</string>
    <string name="tts_translate_text_button_text">TTS Translate Text</string>
</resources>
